Changed API port, added README.md

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ DJANGO_SECRET_KEY=secret_key_must_be_secret
 DJANGO_SETTINGS_MODULE=main.settings
 PYTHONUNBUFFERED=1
 DEBUG=True
-ALLOWED_HOSTS=['127.0.0.1', '0.0.0.0']
+ALLOWED_HOSTS=['*']
 DATABASE=postgres
 
 # postgres
