--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,12 +5,12 @@ upstream django_upstream {
 client_max_body_size 200m;
 
 server {
-    listen 80;
+    listen 8000;
 
     location / {
         proxy_pass http://django_upstream;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
+        proxy_set_header Host $host:8000;
         proxy_redirect off;
     }
 
