--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.10.4-alpine
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src/backend
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONBUFFERED=1
@@ -10,13 +10,13 @@ RUN apk update \
 
 # install dependencies
 RUN pip install --upgrade pip
-COPY ./requirements.txt /usr/src/app/requirements.txt
+COPY ./requirements.txt /usr/src/backend/requirements.txt
 RUN pip install -r requirements.txt
 
 # copy entrypoint
-COPY ./entrypoint.sh /usr/src/app/entrypoint.sh
-RUN sed -i 's/\r$//g' /usr/src/app/entrypoint.sh
-RUN chmod +x /usr/src/app/entrypoint.sh
+COPY ./entrypoint.sh /usr/src/backend/entrypoint.sh
+RUN sed -i 's/\r$//g' /usr/src/backend/entrypoint.sh
+RUN chmod +x /usr/src/backend/entrypoint.sh
 
 # copy project
 COPY . .
