--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,13 +5,18 @@ upstream django_upstream {
 client_max_body_size 200m;
 
 server {
-    listen 8000;
+    listen 80;
 
-    location / {
+    location ~ (api|admin) {
         proxy_pass http://django_upstream;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host:8000;
+        proxy_set_header Host $host;
         proxy_redirect off;
+    }
+
+    location / {
+        root /usr/src/frontend/dist/frontend/;
+        try_files $uri $uri/ /index.html;
     }
 
     location /static/ {
