--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,8 @@ Pillow~=9.2.0
 django-cors-headers==3.13.0
 djoser==2.1.0
 psycopg2==2.9.5
-drf-yasg==1.21.4
+drf-spectacular==0.26.4
+drf-spectacular[sidecar]
 python-dotenv~=0.21.0
 gunicorn==20.1.0
 python-json-logger==2.0.6
